first rountrip to trigger second pipeline working